<resources>
    <string name="app_name">AudioRecorder</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_test">Test</string>
    <string name="mnu_import_audio_file">Import audio</string>
    <string name="mnu_export_audio_file">Export audio</string>
    <string name="mnu_mail_audio_file">Mail audio note</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_activity_audio_recorder">AudioRecorder</string>
    <string name="file_save_button_save">Save</string>
    <string name="file_save_button_cancel">Cancel</string>
    <string name="file_save_title">Save file</string>
    <string name="title_activity_activity_preferences">ActivityPreferences</string>
    <string name="mnu_mail_create_test_signal">Test signal</string>
</resources>
